# sdl2-intro

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
src/: main.cpp
